force-app/main/default/objects/NexusAI_Chat_Request__e/NexusAI_Chat_Request__e.object-meta.xml
<CustomObject>
    <label>NexusAI Chat Request</label>
    <pluralLabel>NexusAI Requests</pluralLabel>
</CustomObject>