force-app/main/default/objects/NexusAI_Chat_Request__e/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <description>Correlation ID that ties a request to its response and scopes the subscriber filter in the LWC.</description>
    <label>Conversation Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>