force-app/main/default/objects/NexusAI_Chat_Request__e/fields/History_Json__c.field-meta.xml
<CustomField>
    <fullName>History_Json__c</fullName>
    <description>Full conversation history as a JSON array of {role, content}. Sent to the LLM for context.</description>
    <label>History JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>