force-app/main/default/objects/NexusAI_Chat_Request__e/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Chat mode: &quot;chat&quot; for general LLM, &quot;agents&quot; for multi-agent orchestration.</description>
    <label>Mode</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>