force-app/main/default/objects/NexusAI_Chat_Request__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Salesforce User ID of the requester. Set server-side in Apex from UserInfo.getUserId().</description>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>