force-app/main/default/objects/NexusAI_Chat_Request__e/fields/User_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Message__c</fullName>
    <description>The user&apos;s message for this turn.</description>
    <label>User Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>